2008-06-30  Janne Jalkanen <jalkanen@apache.org>

        * 2.8.0-alpha-1

        * 2.7.0-svn-52
        
        * JSPWIKI-299: Deleting an attachment from a page which
        had been recently renamed caused an NPE.  Reported by Harry
        Metske.

2008-06-29  Janne Jalkanen <jalkanen@apache.org>

        * Moved all pages from wikipages under wikipages/en, and
        tweaked the build process accordingly.  Also created a basic
        Finnish translation of the CorePages.  The build process
        now creates jspwiki_corepages_en.zip and _fi.zip.

2008-06-19  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-51
        
        * JSPWIKI-231: Updated de i18n.
        
2008-06-25 Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-50

        * [JSPWIKI-295] Sub tabs on the Admin.jsp didn't work because the
        corresponding tag ID's were containing dot's.
        
2008-06-22 Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-49

        * [JSPWIKI-141] I18 properties also fixed in EditGroupContent.jsp
        
        * Included latest favicon.ico of Florian and Harry

2008-06-19  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-48
        
        * WikiWizard removed due to it being LGPL.  The following files
        were removed
           * webdocs/applets/wikiwizard.jar
           * webdocs/applets/WiWi-INF/
           * webdocs/scripts/jspwiki-wikiwizard.js
           * src/com/ecyrd/jspwiki/ui/admin/beans/WikiWizardAdminBean  
           
        * [JSPWIKI-231]: Updated de, zh_CN and nl.  Thanks to Florian
        Holeczek, Harry Metske and David Gao!
        
2008-06-19 Dirk Frederickx <dirk.frederickx@gmail.com>

        * No version bump

        * [JSPWIKI-295] Fixed Tabs in Admin.jsp

2008-06-19  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-47
        
        * Added support for the Universal Edit Button - 
        universaleditbutton.org.  About 3 mins before launch, even...
