@@ -1,2 +1,0 @@
-/* Replace all files (including this one) with the latest FCKEditor code from
-   http://www.fckeditor.net/ */
